src/fstyle.css
body {
  max-width: 650px;
  margin: 40px auto;
  padding: 0 10px;
  font: 18px/1.5 -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
  color: #444;
}

h1,
h2,
h3 {
  line-height: 1.2;
}

@media (prefers-color-scheme: dark) {
  body {
    color: #ccc;
    background: black;
  }

  a:link {
    color: #5bf;
  }

  a:visited {
    color: #ccf;
  }
}


/* copy button styling */
/* copy button styling */
/* copy button styling */



.copy-code-button {
  color: #272822;
  background-color: #FFF;
  border-color: #272822;
  border: 2px solid;
  border-radius: 3px 3px 0px 0px;

  /* right-align */
  display: block;
  margin-left: auto;
  margin-right: 0;

  margin-bottom: -2px;
  padding: 3px 8px;
  font-size: 0.8em;
}

.copy-code-button:hover {
  cursor: pointer;
  background-color: #F2F2F2;
}

.copy-code-button:focus {
  /* Avoid an ugly focus outline on click in Chrome,
     but darken the button for accessibility.
     See https://stackoverflow.com/a/25298082/1481479 */
  background-color: #E6E6E6;
  outline: 0;
}

.copy-code-button:active {
  background-color: #D9D9D9;
}

pre.highlight {
  /* Avoid pushing up the copy buttons. */
  margin: 0;
  overflow-x: auto;
}

